--- a/css/add-produto.css
+++ b/css/add-produto.css
@@ -5,7 +5,7 @@
     color: var(--blue-color);
     background-color: var(--white-color);
 }
-/* end topo */
+/* fim topo */
 
 /* main */
 main .container {
@@ -89,7 +89,7 @@ main .container {
     letter-spacing: 1px;
     cursor: pointer;
 }
-/* end main */
+/* fim main */
 
 @media screen and (min-width: 536px) {
     /* main exibição de itens */
@@ -110,5 +110,5 @@ main .container {
     main .container {
         padding: 4rem 0;
     }
-    /* end main */
+    /* fim main */
 }
